fixed text-wrapping after mentor review

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -80,7 +80,7 @@
     top: 0;
     width: 100%;
     height: 120px;
-    background-color: #4056A1;
+    background-image: linear-gradient(to right,#34343a, gray);
     display: flex;
     justify-content: space-between;
     align-items: center;
